fix background image jumping around on mobile scroll

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,13 +15,27 @@
     transform: scale(1.1);
 } */
 
-body {
+.background-image {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-image: url(/images/cinema.jpg);
     background-attachment: fixed;
     background-position: center center;
-    /* background-size: cover; */
+    background-size: cover;
     background-repeat: no-repeat;
-    backdrop-filter: blur(4px);
+    filter: blur(4px);
+}
+
+body {
+    /* background-image: url(/images/cinema.jpg);
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    backdrop-filter: blur(4px); */
     overflow-x: hidden;
     height: 100vh;
 }
@@ -149,6 +163,9 @@ body {
     }
     body {
         height: fit-content;
+    }
+    .background-image {
+        height: var(--page-height);
     }
 }
 
